# MargoulOs

./: CMakeLists.txt  Makefile  launch.sh  notes.md
k/: Makefile  io.h  k.c  serial.c  serial.h
libs/libc/include/: stdio.h
